# Tokenwise_Retrieval_Evaluation

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  evaluator.py  main.py  pyproject.toml  requirements.txt
data/: chatlogs.md
results/results_250331_140551/: hyperparameter_results_token_wise.csv
src/: __init__.py  config.py  evaluator.py  main.py  plots.py  utils.py
tests/: __init__.py  test_evaluator.py
