[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "jetbrains-rag-task"
version = "0.1.0"
description = "RAG evaluation package"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "4.50.2"
torch = "2.2.2"
pandas = "2.2.3"
numpy = "1.26.4"
matplotlib = "3.9.4"

[tool.poetry.group.dev.dependencies]
black = "24.2.0"
flake8 = "7.0.0"
mypy = "1.8.0"
pytest = "8.0.0"
pytest-cov = "4.1.0"
isort = "5.13.2"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src" 