[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "benchmarking-chunking-strategies"
version = "0.1.0"
description = "Benchmarking chunking strategies for RAG systems"
readme = "README.md"
packages = [{include = "src"}]
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "4.50.2"
torch = "2.2.2"
pandas = "2.2.3"
numpy = "1.26.4"
matplotlib = "3.9.4"
chunking-evaluation = { git = "https://github.com/brandonstarxel/chunking_evaluation.git" }
tqdm = "^4.66.0"

[tool.poetry.group.dev.dependencies]
black = "24.2.0"
flake8 = "7.0.0"
mypy = "1.8.0"
pytest = "8.0.0"
pytest-cov = "4.1.0"
isort = "5.13.2"
pre-commit = "^3.6.0"
flake8-docstrings = "^1.7.0"

[tool.poetry.scripts]
benchmark = "src.main:main"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.tox
    | venv
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "__init__.py:F401",
] 